# frankenstein-ml

./: README.md  justfile  pyproject.toml
src/identify_car_makers/: __init__.py  artifacts.py  batching.py  callbacks.py  config.py  data_preparation.py  evaluate.py  fine_tune.py  inference.py  modal_infra.py  output_types.py  paths.py  peft.py  report.py
src/identify_car_makers/configs/: eval_lfm_3B.yaml  eval_lfm_450M.yaml
