[project]
name = "identify-car-makers"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "datasets>=4.4.2",
    "matplotlib>=3.10.8",
    "modal>=1.3.0.post1",
    "peft>=0.18.0",
    "pillow>=12.1.0",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.12.0",
    "ruff>=0.14.10",
    "scikit-learn>=1.8.0",
    "seaborn>=0.13.2",
    "tqdm>=4.67.1",
    "transformers>=4.57.3",
    "trl>=0.26.2",
    "wand>=0.6.13",
]
